--- a/adndroid/Lab3/app/src/main/res/layout/recyclerview_item.xml
+++ b/adndroid/Lab3/app/src/main/res/layout/recyclerview_item.xml
@@ -16,4 +16,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
+        android:id="@+id/id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <Button
+        android:id="@+id/deleteUserButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/del" />
+
+
 </LinearLayout>
